fix instock-section spacing

--- a/source/sass/blocks/section-instock.scss
+++ b/source/sass/blocks/section-instock.scss
@@ -55,6 +55,10 @@
   @media (min-width: $small-desktop-width) {
     width: unset;
   }
+
+  &:last-of-type {
+    margin-bottom: 0;
+  }
 }
 
 .instock__item-box {
